# webtopics

./: .pre-commit-config.yaml  README.md  environment.yaml  noxfile.py  pyproject.toml  requirements.txt
docs/: Makefile
docs/source/: conf.py  contents.md  index.md  latex_index.md
notebooks/: Recsys_deployment_workflow_idea.ipynb  bertopic-bookmarks-glove.ipynb  bertopic-bookmarks.ipynb  bertopic.ipynb  test_torch_gpu.ipynb  top2vec_demo.ipynb  walmart-v2-count-vec.ipynb  walmart-v2.ipynb  walmart.ipynb
webtopics/: __init__.py  bertopic.py  model.py  web.py
